--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "chat"
 version = "0.1.0"
 description = ""
-authors = ["moarshy <marshath@gmail.com>"]
+authors = ["casey <casey@aliveai.com.au>"]
 readme = "README.md"
 packages = [
     {include = "chat", from="."}
@@ -12,6 +12,7 @@ packages = [
 python = "^3.10"
 requests = "^2.31.0"
 pydantic = "^2.7.0"
+ollama = "^0.2.1"
 
 
 [build-system]
