--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,11 @@ requests = "^2.31.0"
 pydantic = "^2.7.0"
 ollama = "^0.2.1"
 chromadb = "^0.5.0"
+tqdm = "^4.66.4"
 
 
+[tool.poetry.dev-dependencies]
+black = "^24.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
